--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
     <meta name="author" content="Shashank Mankala">
     <meta name="keywords" content="HTML, CSS, Javascript, JS, Shashank Mankala, portfolio, website">
-        <meta property="og:description"
+    <meta property="og:description"
         content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
     <meta property="og:site_name" content="" />
     <meta property="og:title" content="">
@@ -25,7 +25,16 @@
     <title>Shashank Mankala | Computer Science Engineer</title>
     <link rel="stylesheet" href="css/style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9476714825436397"
-     crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7YVFRYX6GS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-7YVFRYX6GS');
+    </script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
@@ -35,6 +44,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="fullpage">
         <div class="overlayfull" id="overlayfull"></div>
