new skills and projects

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <p>Contact</p>
                     </div>
                 </div>
-                <div class="resume navdiv" onclick="viewresume()">
+                <div class="resume navdiv" id="lresume" onclick="viewresume()">
                     <div class="navicon inthemef">
                         <i class="fas fa-file-alt"></i>
                     </div>
@@ -581,7 +581,7 @@
                                     </div>
                                 </div>
                                 <div class="prdisc">
-                                    <p>A python project, made by using Tkinter package.</p>
+                                    <p>Python project, made by using Tkinter package.</p>
                                 </div>
                             </div>
                             <div class="prshidonoff" id="prshidonoff6">
@@ -679,7 +679,7 @@
 
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/python.png" alt="C++">
+                                    <img src="img/python.png" alt="Python">
                                 </div>
                                 <div class="skillnamename">
                                     <h2>Python</h2>
@@ -687,7 +687,7 @@
                             </div>
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/java.png" alt="C++">
+                                    <img src="img/java.png" alt="Java">
                                 </div>
                                 <div class="skillnamename">
                                     <h2>Java</h2>
@@ -695,7 +695,7 @@
                             </div>
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/html.png" alt="C++">
+                                    <img src="img/html.png" alt="HTML">
                                 </div>
                                 <div class="skillnamename">
                                     <h2>HTML</h2>
@@ -703,7 +703,7 @@
                             </div>
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/css.png" alt="C++">
+                                    <img src="img/css.png" alt="CSS">
                                 </div>
                                 <div class="skillnamename">
                                     <h2>CSS</h2>
@@ -711,14 +711,22 @@
                             </div>
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/js.png" alt="C++">
+                                    <img src="img/js.png" alt="JS">
                                 </div>
                                 <div class="skillnamename">
                                     <h2>JavaScript</h2>
                                 </div>
                             </div>
-
+                            <div class="skillname">
+                                <div class="skillimg">
+                                    <img src="img/Rlogo.png" alt="R programming">
+                                </div>
+                                <div class="skillnamename">
+                                    <h2>R(programming)</h2>
+                                </div>
+                            </div>
                         </div>
+
                         <div class="typeheading">
                             <p>Backend</p>
                         </div>
@@ -726,16 +734,15 @@
                         <div class="skillcards">
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/nodejs.png" alt="C++">
+                                    <img src="img/nodejs.png" alt="Nodejs">
                                 </div>
                                 <div class="skillnamename">
-                                    <h2>Node</h2>
+                                    <h2>Node Js</h2>
                                 </div>
                             </div>
-
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/mysql.png" alt="C++">
+                                    <img src="img/mysql.png" alt="mysql">
                                 </div>
                                 <div class="skillnamename">
                                     <h2>MySQL</h2>
@@ -743,14 +750,37 @@
                             </div>
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/mongodb.png" alt="C++" id="mongoimg">
+                                    <img src="img/mongodb.png" alt="mongodb" id="mongoimg">
                                 </div>
                                 <div class="skillnamename">
                                     <h2>MongoDB</h2>
                                 </div>
                             </div>
-
                         </div>
+
+                        <div class="typeheading">
+                            <p>Tools</p>
+                        </div>
+                        <hr>
+                        <div class="skillcards">
+                            <div class="skillname">
+                                <div class="skillimg">
+                                    <img src="img/spss.png" alt="SPSS">
+                                </div>
+                                <div class="skillnamename">
+                                    <h2>SPSS</h2>
+                                </div>
+                            </div>
+                            <div class="skillname">
+                                <div class="skillimg">
+                                    <img src="img/Tableau.png" alt="Tableau">
+                                </div>
+                                <div class="skillnamename">
+                                    <h2>Tableau</h2>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </section>
@@ -781,7 +811,7 @@
                                                 analysis with SQL</b>"</em></p>
                                     <ul>
                                         <li>
-                                            <p>Completed all weeks of course, scoring 100% on all assessments</p>
+                                            <p>Completed all weeks, of course, scoring 100% in all assessments</p>
                                         </li>
                                         <li>
                                             <p>Learned how to use frameworks like Hadoop System and worked on Hive and
@@ -817,7 +847,7 @@
                                     <p id="expercardintro"><em><b>Bachelors' of Technology</b> </em></p>
                                     <ul>
                                         <li>Branch- Computer Science and Engineering</li>
-                                        <li>Major - Data Science</li>
+                                        <li>Engineering Minor - Data Science</li>
                                     </ul>
                                 </div>
                             </div>
@@ -835,6 +865,20 @@
                 </div>
                 <div class="awardscontainer">
                     <div class="awardscontent">
+                        <div class="awardcard">
+                            <div class="awardcardhead">
+                                <p class="awardtitle inthemef" id="certimongo">MongoDB M001</p>
+                                <p class="awardtype">Certificate of Completion | April 2022</p>
+                            </div>
+                            <div class="awardcardbody">
+                                <ul>
+                                    <li>
+                                        I have been certified by MongoDB University for completion of the M001 Mongo DB course.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
                         <div class="awardcard">
                             <div class="awardcardhead">
                                 <p class="awardtitle inthemef" id="certigfg">GFG DSA self paced course</p>
@@ -856,11 +900,11 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        SnackDown is India’s global programming event that invites coders from all over
+                                        SnackDown is India's global programming event that invites coders from all over
                                         the world
                                     </li>
                                     <li>
-                                        I had qualified the qualification and Round-1A rounds.
+                                        I had qualified for the qualification and Round-1A rounds.
                                     </li>
                                 </ul>
                             </div>
@@ -888,8 +932,12 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have completed all three courses in this specialization and learned many new
-                                        things.
+                                        I have completed all three courses in this specialization. 
+                                        <ul class="smalltext">
+                                            <li>Course 1: Foundations for Big Data Analysis with SQL</li>
+                                            <li>Course 2: Analyzing Big Data with SQL</li>
+                                            <li>Course 3: Managing Big Data in Clusters and Cloud Storage</li>
+                                        </ul>
                                     </li>
                                 </ul>
                             </div>
@@ -902,9 +950,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        As I am very enthusiastic in learning new skills along with pratical working of
-                                        these applications I have completed this course and achieved certificate from
-                                        Google through Coursera.
+                                        Had hands-on experience with programming concepts through interactive exercises and real-world examples.
                                     </li>
                                 </ul>
                             </div>
@@ -918,7 +964,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        After consitent coding for three months I have ranked as top 63rd coder globaly.
+                                        After consistent coding for three months, I have ranked as the top 63rd coder globally.
                                     </li>
                                 </ul>
                             </div>
