--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,7 @@
                         </div>
                     </div>
                     <div class="contactfooter">
-                        <p>Copyright &copy; 2021 All rights reserved | Designed by M Shashank</p>
+                        <p>&copy; 2021-2022 | All rights reserved with Copyright & Trademarks | Made with &hearts; by M Shashank</p>
                     </div>
                 </div>
             </section>
