added easychat project

--- a/index.html
+++ b/index.html
@@ -274,6 +274,48 @@
                 </div>
                 <div class="prcontainer">
                     <div class="prcontent">
+                        <!-- pr easychat website -->
+                        <div class="prs" id="prsn2">
+                            <div class="prsonoff" id="prsonoffn2">
+                                <div class="prgif" id="prgifn2">
+                                    <img src="img/easychat.webp" alt="" class="prgifgif" id="prgifgifn2">
+                                </div>
+                                <div class="prtitle inthemef" id="prtitlen2">
+                                    <p id="prpn2">EasyChat Website</p>
+                                    <div class="proptions" id="proptionn2">
+                                        <i class="fas fa-ellipsis-v"></i>
+                                    </div>
+                                </div>
+                                <div class="prdisc">
+                                    <p>EasyChat is a website where users can create rooms and chat with anyone with the link.</p>
+                                </div>
+                            </div>
+                            <div class="prshidonoff" id="prshidonoffn2">
+                                <div class="prdefhead">
+                                    <p>Accomplishments</p>
+                                    <i class="fas fa-times" id="closeoptn2"></i>
+                                </div>
+                                <div class="prdefbody">
+                                    <ul>
+                                        <li>
+                                            <p>EasyChat website is a place where user come here and create temporary rooms and can chat. Easy and safe to use.</p>
+                                        </li>
+                                        <li>
+                                            <p>I have used HTML, CSS, JavaScript, and PHP for the backend to make the portfolio website.</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <hr>
+                                <div class="prdeffooter">
+                                    <!-- <div class="prdeffooterdiv inthemeb" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');"> -->
+                                    <div class="prdeffooterdiv inthemeb" id="viewprojectn2" title="View project">
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- pr portfolio  -->
                         <div class="prs" id="prsn1">
                             <div class="prsonoff" id="prsonoffn1">
                                 <div class="prgif" id="prgifn1">
