Added new project and updated resume

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 </div>
                 <div class="aboutcontent">
                     <div class="abouttxt">
-                        <p><i class="far fa-dot-circle inthemef"></i> &nbsp;I am currently pursuing my Bachelor's degree
+                        <p><i class="far fa-dot-circle inthemef"></i> &nbsp;I am currently pursued my Bachelor's degree
                             in Computer Science from Lovely Professional
                             University, Punjab. I’m excited to find a role where I can accomplish my goals and expand
                             my current skillset while also learning, growing and contributing to a great organization
@@ -274,6 +274,53 @@
                 </div>
                 <div class="prcontainer">
                     <div class="prcontent">
+                        <!-- pr Road accidents dashboard -->
+                        <div class="prs" id="prsn3">
+                            <div class="prsonoff" id="prsonoffn3">
+                                <div class="prgif" id="prgifn3">
+                                    <img src="img/road-accidents-dashboard.png" alt="road-accidents-dashboard.png" class="prgifgif" id="prgifgifn3">
+                                </div>
+                                <div class="prtitle inthemef" id="prtitlen3">
+                                    <p id="prpn3">Road Accidents Dashboard</p>
+                                    <div class="proptions" id="proptionn3">
+                                        <i class="fas fa-ellipsis-v"></i>
+                                    </div>
+                                </div>
+                                <div class="prdisc">
+                                    <p>This project aims to analyze road accidents based on factors like weather, road surfaces, location, vehicle type, and casualties.</p>
+                                </div>
+                            </div>
+                            <div class="prshidonoff" id="prshidonoffn3">
+                                <div class="prdefhead">
+                                    <p>Accomplishments</p>
+                                    <i class="fas fa-times" id="closeoptn3"></i>
+                                </div>
+                                <div class="prdefbody">
+                                    <ul>
+                                        <li>
+                                            <p>I extracted, cleaned, analyzed the data, and built an interactive dashboard for easy visualization.</p>
+                                        </li>
+                                        <li>
+                                            <p>The insights gained will aid in accident prevention and improving road safety.</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <hr>
+                                <div class="prdeffooter">
+                                    <div class="prdeffooterdiv inthemeb" id="viewprojectn3" title="View project">
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </div>
+                                    <div class="prdeffooterdiv inthemeb" id="viewrepon3" title="View GitHub repository">
+                                        <i class="fab fa-github"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    
+
+
                         <!-- pr easychat website -->
                         <div class="prs" id="prsn2">
                             <div class="prsonoff" id="prsonoffn2">
@@ -819,6 +866,14 @@
                                 </div>
                                 <div class="skillnamename">
                                     <h2>Tableau</h2>
+                                </div>
+                            </div>
+                            <div class="skillname">
+                                <div class="skillimg">
+                                    <img src="img/powerbi.png" alt="Power BI">
+                                </div>
+                                <div class="skillnamename">
+                                    <h2>Power BI</h2>
                                 </div>
                             </div>
                         </div>
