--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@
                         <div class="prs" id="prsn3">
                             <div class="prsonoff" id="prsonoffn3">
                                 <div class="prgif" id="prgifn3">
-                                    <img src="img/road-accidents-dashboard.png" alt="road-accidents-dashboard.png" class="prgifgif" id="prgifgifn3">
+                                    <img src="img/road-accidents-dashboard.png" alt="road-accidents-dashboard.png"
+                                        class="prgifgif" id="prgifgifn3">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitlen3">
                                     <p id="prpn3">Road Accidents Dashboard</p>
@@ -287,7 +288,8 @@
                                     </div>
                                 </div>
                                 <div class="prdisc">
-                                    <p>This project aims to analyze road accidents based on factors like weather, road surfaces, location, vehicle type, and casualties.</p>
+                                    <p>This project aims to analyze road accidents based on factors like weather, road
+                                        surfaces, location, vehicle type, and casualties.</p>
                                 </div>
                             </div>
                             <div class="prshidonoff" id="prshidonoffn3">
@@ -298,10 +300,12 @@
                                 <div class="prdefbody">
                                     <ul>
                                         <li>
-                                            <p>I extracted, cleaned, analyzed the data, and built an interactive dashboard for easy visualization.</p>
+                                            <p>Extracted, cleaned, analyzed the data, and built an interactive
+                                                dashboard for easy visualization.</p>
                                         </li>
                                         <li>
-                                            <p>The insights gained will aid in accident prevention and improving road safety.</p>
+                                            <p>The insights gained will aid in accident prevention and improving road
+                                                safety.</p>
                                         </li>
                                     </ul>
                                 </div>
@@ -318,7 +322,7 @@
                         </div>
 
 
-                    
+
 
 
                         <!-- pr easychat website -->
@@ -334,7 +338,8 @@
                                     </div>
                                 </div>
                                 <div class="prdisc">
-                                    <p>EasyChat is a website where users can create rooms and chat with anyone with the link.</p>
+                                    <p>EasyChat is a website where users can create rooms and chat with anyone with the
+                                        link.</p>
                                 </div>
                             </div>
                             <div class="prshidonoff" id="prshidonoffn2">
@@ -345,10 +350,12 @@
                                 <div class="prdefbody">
                                     <ul>
                                         <li>
-                                            <p>EasyChat website is a place where user come here and create temporary rooms and can chat. Easy and safe to use.</p>
+                                            <p>EasyChat website is a place where user come here and create temporary
+                                                rooms and can chat. Easy and safe to use.</p>
                                         </li>
                                         <li>
-                                            <p>I have used HTML, CSS, JavaScript, and PHP for the backend to make the portfolio website.</p>
+                                            <p>I have used HTML, CSS, JavaScript, and PHP for the backend to make the
+                                                portfolio website.</p>
                                         </li>
                                     </ul>
                                 </div>
@@ -891,6 +898,52 @@
                             <div class="expercardheadbody">
                                 <div class="expercardhead">
                                     <div class="expercardlogo"
+                                        onclick="window.open(`https://frugaltesting.com/`, '_blank');">
+                                        <img src="img/ft.png" alt="coursera">
+                                    </div>
+                                    <div class="expercardtitle inthemef"
+                                        onclick="window.open(`https://frugaltesting.com/`, '_blank');">
+                                        <p> FRUGAL TESTING</p>
+                                    </div>
+                                    <div class="expercardrole">
+                                        <p>SDET INTERN</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="expercardbody">
+                                    <p id="expercardintro"><em> <b>Developed automation scripts  </b>for <b>ONELERN </b> and <b>NPCI</b> Projects.</em></p>
+                                    <ul>
+                                        <li>
+                                            <p>Developed and implemented automation frameworks for multiple projects,
+                                                resulting in a significant reduction in manual testing efforts.</p>
+                                        </li>
+                                        <li>
+                                            <p>Worked on cross-functional teams to deliver high-quality software on time
+                                                and within budget.
+                                            </p>
+                                        </li>
+                                        <li>
+                                            <p>Designed and implemented end-to-end testing solutions that integrated
+                                                with various third-party tools and systems.
+                                            </p>
+                                        </li>
+                                        <li>
+                                            <p>Proactively identified areas for improvement in the software development
+                                                process, and worked with the team to implement solutions.
+                                            </p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="expercardfooter">
+                                <p>June'22 - May'23 | On-site</p>
+                            </div>
+                        </div>
+                        <div class="expercards">
+                            <div class="expercardheadbody">
+                                <div class="expercardhead">
+                                    <div class="expercardlogo"
                                         onclick="window.open(`https://www.coursera.org/`, '_blank');">
                                         <img src="img/coursera.png" alt="coursera">
                                     </div>
@@ -970,7 +1023,8 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have been certified by MongoDB University for completion of the M001 Mongo DB course.
+                                        I have been certified by MongoDB University for completion of the M001 Mongo DB
+                                        course.
                                     </li>
                                 </ul>
                             </div>
@@ -1029,7 +1083,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have completed all three courses in this specialization. 
+                                        I have completed all three courses in this specialization.
                                         <ul class="smalltext">
                                             <li>Course 1: Foundations for Big Data Analysis with SQL</li>
                                             <li>Course 2: Analyzing Big Data with SQL</li>
@@ -1047,7 +1101,8 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        Had hands-on experience with programming concepts through interactive exercises and real-world examples.
+                                        Had hands-on experience with programming concepts through interactive exercises
+                                        and real-world examples.
                                     </li>
                                 </ul>
                             </div>
@@ -1061,7 +1116,8 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        After consistent coding for three months, I have ranked as the top 63rd coder globally.
+                                        After consistent coding for three months, I have ranked as the top 63rd coder
+                                        globally.
                                     </li>
                                 </ul>
                             </div>
@@ -1180,7 +1236,8 @@
                         </div>
                     </div>
                     <div class="contactfooter">
-                        <p>&copy; 2021-2022 | All rights reserved with Copyright & Trademarks | Made with &hearts; by M Shashank</p>
+                        <p>&copy; 2021-2022 | All rights reserved with Copyright & Trademarks | Made with &hearts; by M
+                            Shashank</p>
                     </div>
                 </div>
             </section>
