Added new certification

--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,38 @@
                 </div>
                 <div class="awardscontainer">
                     <div class="awardscontent">
+
+                        <div class="awardcard">
+                            <div class="awardcardhead">
+                                <p class="awardtitle inthemef" id="certicareeressmicrosoft">Career Essentials in Data Analysis by
+                                    Microsoft and LinkedIn Learning</p>
+                                <p class="awardtype">Certificate of Completion | June 2023</p>
+                            </div>
+                            <div class="awardcardbody">
+                                <ul>
+                                    <li>
+                                        I have been certified by Microsoft and LinkedIn Learning for completion of the course.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="awardcard">
+                            <div class="awardcardhead">
+                                <p class="awardtitle inthemef" id="certisqlleetcode">Top 50 SQL By Leetcode</p>
+                                <p class="awardtype">Earned SQL badge | June 2023</p>
+                            </div>
+                            <div class="awardcardbody">
+                                <ul>
+                                    <li>
+                                        I have earned a badge for solving top 50 sql interview problems.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+
+                        <!-- //////////////////// -->
                         <div class="awardcard">
                             <div class="awardcardhead">
                                 <p class="awardtitle inthemef" id="certimongo">MongoDB M001</p>
